--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,7 +1,7 @@
 .dashboard {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, minmax(200px, auto));
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(5, minmax(200px, 1fr));
   gap: 1rem;
   height: 100vh;
   background-color: #f3f4f6; /* Tailwind's gray-100 */
@@ -13,20 +13,21 @@
 }
 
 .navbar {
-  grid-column: 1 / -1;
   background-color: #374151; /* Tailwind's gray-700 */
   color: white;
-  padding: 1.5rem; /* Tailwind's p-6 */
+  padding: 1.5rem; 
   text-align: center;
   font-weight: bold;
-  font-size: 1.5em; /* Tailwind's text-2xl */
+  font-size: 1.5em; 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+ 
 }
 .components {
+    justify-content: center;
+    align-items: center;
   font-size: 1.2em;
   margin: 1rem;
   background-color: white;
