--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,9 +1,12 @@
 .dashboard {
   display: grid;
+
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(5, minmax(200px, 1fr));
+  grid-template-rows: auto auto;
+  align-items: start;
+  justify-items: stretch;
+
   gap: 1rem;
-  height: 100vh;
   background-color: #f3f4f6; /* Tailwind's gray-100 */
 }
 
