--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
-@import "tailwindcss";
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
-body {
-  /* background-color: antiquewhite; */
-  font-family: "Josefin Sans", sans-serif;
-}
+@import 'tailwindcss';
+
 html {
   scroll-behavior: smooth;
 }
