--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -43,7 +43,7 @@
 
 .sidebar-item {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   padding: 1rem 0.5rem;
   margin: 0.25rem 0.5rem;
   border-radius: 12px;
@@ -75,7 +75,7 @@
 .sidebar-icon {
   font-size: 1.5rem;
   min-width: 24px;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   cursor: pointer;
 }
 
