Added transactionPage router and fixed router folder name

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,7 +1,7 @@
-.dashboard {
+.dashboard,
+.transaction-dashboard {
   display: flex;
   flex-direction: column;
-  /* min-height: 100vh; */
   background-color: #f0fdf4;
   padding: 1rem 1.5rem;
   width: 100%;
