making website responsive and creating seprate folder for images

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 html {
   scroll-behavior: smooth;
+}
+#hero {
+  /* background-color: green; */
 }
