creating balance page to display the total balance of user

--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -1,5 +1,6 @@
 .dashboard,
-.transaction-dashboard {
+.transaction-dashboard,
+.balance-dashboard {
   display: flex;
   flex-direction: column;
   background-color: #f0fdf4;
